<resources>
  <string name="app_name">Potential Waffle</string>
  <string name="navigation_drawer_open">Open navigation drawer</string>
  <string name="navigation_drawer_close">Close navigation drawer</string>
  <string name="nav_header_title">Android Studio</string>
  <string name="nav_header_subtitle">android.studio@android.com</string>
  <string name="nav_header_desc">Navigation header</string>
  <string name="action_settings">Settings</string>
  <string name="title_activity_login">Sign in</string>
  <!-- Strings related to login -->
  <string name="prompt_email">Email</string>
  <string name="prompt_password">Password (optional)</string>
  <string name="action_sign_in">Sign in or register</string>
  <string name="action_sign_in_short">Sign in</string>
  <string name="error_invalid_email">This email address is invalid</string>
  <string name="error_invalid_password">This password is too short</string>
  <string name="error_incorrect_password">This password is incorrect</string>
  <string name="error_field_required">This field is required</string>
  <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
  <!-- challenges -->
  <string name="title_challenge_list">Challenges</string>
  <string name="title_challenge_detail">Challenge Detail</string>
  <string name="select_challenge">#select access node#</string>
  <!-- Base layout strings -->
  <string name="top_text">current tasks: 180
    0 errors - 3 warnings
    Authentication accepted!
    generating security protocol&#8230; requesting challenges&#8230;
  </string>
  <string name="system_status">system status: warning</string>
  <string name="version">version: alpha 2.8</string>
  <!-- Challenge texts -->
  <string name="security_breach">security breach alert!</string>
  <string name="challenger_name">challenger name:</string>
  <string name="button_accept_challenge">Accept Challenge</string>
  <string name="button_continue">Proceed</string>
  <string name="button_option_A">Option A</string>
  <string name="button_option_B">Option B</string>
  <string name="button_option_C">Option C</string>
  <string name="button_option_D">Option D</string>
</resources>
