<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:padding="10dp"
              android:background="@drawable/challenges_background"
              android:orientation="vertical">
    <TextView
      android:id="@+id/security_breach"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:padding="16dp"
      android:textColor="@color/alertColor"
      android:fontFamily="@font/ehsmb"
      android:textAlignment="center"
      android:text="@string/security_breach"/>
    <ImageView
      android:id="@+id/ivPlace"
      android:layout_width="wrap_content"
      android:layout_height="70dp"
      android:src="@drawable/challenger_icon" />
    <TextView
      android:id="@+id/challenge_detail"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:textColor="@color/textColor"
      android:fontFamily="@font/ehsmb"
      android:textAlignment="center"
      android:text="@string/challenger_name"/>
    <ImageButton
      android:id="@+id/video_button"
      android:layout_width="match_parent"
      android:layout_height="150dp"
      android:src="@drawable/video_overlay"/>
    <Button
      android:id="@+id/accept_challenge"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:background="@drawable/button_background"
      android:text="@string/button_accept_challenge"
      android:textAppearance="@style/Base.TextAppearance.AppCompat.Button"
      android:textColor="@color/textColor"
      android:fontFamily="@font/ehsmb"/>
</LinearLayout>
