<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                     xmlns:app="http://schemas.android.com/apk/res-auto"
                                                     xmlns:tools="http://schemas.android.com/tools"
                                                     android:layout_width="match_parent"
                                                     android:layout_height="match_parent"
                                                     android:fitsSystemWindows="true"
                                                     android:background="@drawable/background"
                                                     tools:context=".ChallengeListActivity">
  <LinearLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    android:paddingTop="16dp"
    android:paddingHorizontal="10dp"
    android:background="@drawable/outer_rectangle">

    <TextView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="16dp"
      android:layout_marginHorizontal="16dp"
      android:fontFamily="@font/ehsmb"
      android:text="@string/top_text"
      android:textColor="@color/textColor"/>

    <TextView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="16dp"
      android:layout_marginHorizontal="16dp"
      android:fontFamily="@font/eurostarblackextended"
      android:text="@string/title_challenge_list"
      android:textAlignment="center"
      android:textSize="35dp"
      android:textColor="@color/textColor"/>

    <FrameLayout
      android:id="@+id/frameLayoutChallenges"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_margin="20dp"
      android:padding="5dp"
      app:layout_behavior="@string/appbar_scrolling_view_behavior">
      <include layout="@layout/challenge_list"/>
     </FrameLayout>
    <TextView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="16dp"
      android:fontFamily="@font/ehsmb"
      android:textAlignment="center"
      android:text="@string/select_challenge"
      android:textSize="20dp"
      android:textColor="@color/textColor"/>

    <RelativeLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content">
      <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true">
        <TextView
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="16dp"
          android:textAlignment="center"
          android:fontFamily="@font/ehsmb"
          android:text="@string/system_status"
          android:textColor="@color/textColor"/>
        <TextView
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="16dp"
          android:textAlignment="center"
          android:fontFamily="@font/ehsmb"
          android:text="@string/version"
          android:textColor="@color/textColor"
          android:layout_alignParentBottom="true"/>
      </LinearLayout>
    </RelativeLayout>
  </LinearLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>
